# zk-mahjong

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
circuits/: .gitignore  Cargo.toml  Makefile  README.md  hardhat.config.cts  hardhat.config.ts  package.json  rollup.config.mjs  tsconfig.json  vite.config.ts
circuits/circuits/: babyjubjub.circom  elgamal_pubkey.circom  elgamal_template.circom  matrix.circom  shuffle_encrypt.circom
circuits/contracts/: elgamal_pubkey.sol  shuffle_encrypt.sol
circuits/src/: index.ts  lib.rs  utils.ts
circuits/src/encrypt_circuit/: dev.rs  mod.rs  test.rs
circuits/src/escalarmul_circuit/: dev.rs  mod.rs  test.rs
circuits/src/gadgets/: utils.rs
circuits/src/shuffle_circuit/: dev.rs  mod.rs  test.rs
circuits/src/shuffle_encrypt_circuit/: mod.rs  test.rs
circuits/src/sub_circuits/: mod.rs
circuits/src/sub_circuits/encrypt_circuit/: dev.rs  mod.rs  test.rs
circuits/src/sub_circuits/escalarmul_circuit/: dev.rs  mod.rs  test.rs
circuits/src/sub_circuits/shuffle_circuit/: dev.rs  mod.rs  test.rs
circuits/src/sub_circuits/tables/: encrypt.rs  escalarmul.rs  mod.rs
circuits/src/tables/: encrypt.rs  escalarmul.rs  fixed.rs  mod.rs  shuffle.rs
circuits/src/utils/: constraint_builder.rs  ec.rs  mod.rs  test.rs
circuits/src/workers/: elgamal_pubkey.ts  index.ts  prover.ts
core/: Cargo.toml
core/src/: bn128.rs  elgamal.rs  lib.rs
core/src/babyjubjub/: constants.rs  mod.rs  tests.rs
core/src/poseidon/: constants.rs  mod.rs
core/src/tile/: map.rs  mod.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts  webpack.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Tile.css  Tile.tsx
frontend/src/utils/: tile.ts
gadgets/: Cargo.toml
gadgets/src/: lib.rs  mul_add.rs  types.rs  utils.rs
wasm/: package.json  tsconfig.json  vite.config.ts
wasm-sys/: Cargo.toml
wasm-sys/src/: keys.rs  lib.rs  tiles.rs
wasm/src/: index.ts  key.ts  tile.ts
