[package]
name = "zk-mahjong-wasm-sys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
zk-mahjong-core = { path = "../core" }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
debuggable = ["console_error_panic_hook"]
